# swagger/user.swagger.yaml
@@ -89,6 +89,45 @@ paths:
           schema:
             $ref: '#/definitions/BaseError'
 
+  /users/{user-id}/missions/continue:
+    get:
+      tags:
+        - User
+      summary: 내가 진행중인 미션 목록 조회
+      parameters:
+        - name: user-id
+          in: path
+          required: true
+          type: integer
+          description: 유저 ID
+        - name: page
+          in: query
+          required: false
+          type: integer
+          description: 요청 페이지 (1이상)
+        - name: size
+          in: query
+          required: false
+          type: integer
+          description: 조회할 미션 개수
+      responses:
+        '200':
+          description: 진행 중인 미션 목록 조회 성공
+          schema:
+            $ref: '#/definitions/UserContinueMissionsResponse'
+        '400':
+          description: 잘못된 요청
+          schema:
+            $ref: '#/definitions/ParameterNotFoundError'
+        '404':
+          description: 유저 정보가 존재하지 않음
+          schema:
+            $ref: '#/definitions/UsereNotFoundError'
+        '500':
+          description: 서버 에러
+          schema:
+            $ref: '#/definitions/BaseError'
+
 definitions:
   SignInRequest:
     type: object
@@ -229,6 +268,43 @@ definitions:
                 content:
                   type: string
                   example: "리뷰 내용"
+
+  UserContinueMissionsResponse:
+    type: object
+    properties:
+      isSuccess:
+        type: boolean
+        example: true
+      code:
+        type: integer
+        example: 2000
+      message:
+        type: string
+        example: "success!"
+      result:
+        type: object
+        properties:
+          totalElements:
+            type: integer
+            example: 20
+          missions:
+            type: array
+            items:
+              type: object
+              properties:
+                restaurant_name:
+                  type: string
+                  example: "가게 이름"
+                title:
+                  type: string
+                  example: "미션 제목"
+                reward:
+                  type: integer
+                  example: 500
+                end_date:
+                  type: string
+                  format: date
+                  example: "2024.06.21"
 
   ParameterNotFoundError:
     type: object
